--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">    
+    <link rel="stylesheet" href="dependencies/ol.css" type="text/css">    
     <link rel="stylesheet" href="style.css" type="text/css">
     
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsts/2.6.1/jsts.js"></script>
+    <script src="dependencies/ol.js"></script>
+    <script src="dependencies/jsts.js"></script>
     <title>Polygon Split by a line</title>
   </head>
   <body>    
